# repo-clonado-Gestion-Hospitalaria

./: CMakeLists.txt  Proyecto Gestión Hospitalaria.sln  README.md
src/: .gitignore  Cita.cpp  Cita.h  IServicioArchivos.h  IServicioCitas.h  IServicioMedicos.h  IServicioPacientes.h  InterfazHospital.cpp  InterfazHospital.h  Makefile  Medico.cpp  Medico.h  Modelos.cpp  Modelos.h  Paciente.cpp  Paciente.h  ServicioArchivos.cpp  ServicioArchivos.h  ServicioCitas.cpp  ServicioCitas.h  ServicioMedicos.cpp  ServicioMedicos.h  ServicioPacientes.cpp  ServicioPacientes.h  Servicios.cpp  Servicios.h  main.cpp
src/Documentos/: README.md
